Changes: * added polyfills via minifill * fixed some SCSS source issue with mixins in regards to lists * minor other mixins fixes * some demo fixes with flexbox and grid on IE10+ * version bump

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,12 +157,12 @@ ul { list-style: inherit; list-style-position: inside; }
 	.row.nomargin > .col-8 {flex-basis:66.665%; max-width:66.665%}
 	.row.nomargin > .col-9 {flex-basis:75%; max-width:75%} */
 
-	.col-2 { max-width:16.665%}
-	.col-3 { max-width:25%}
-	.col-4 { max-width:33.33%}
-	.col-6 { max-width:50%}
-	.col-8 { max-width:66.65%}
-	.col-9 { max-width:75%}
+	.col-2 { max-width:16.665%; flex: 0 0 16.665%}
+	.col-3 { max-width:25%; flex: 0 0 25%}
+	.col-4 { max-width:33.33%; flex: 0 0 33.33%}
+	.col-6 { max-width:50%; flex: 0 0 50%}
+	.col-8 { max-width:66.65%; flex: 0 0 66.65%}
+	.col-9 { max-width:75%; flex: 0 0 75%}
 
 
 	.row.nomargin > .col-2,
@@ -171,7 +171,7 @@ ul { list-style: inherit; list-style-position: inside; }
 	.row.nomargin > .col-6,
 	.row.nomargin > .col-8,
 	.row.nomargin > .col-10,
-	.row.nomargin > .col-9 {padding: 0; flex: auto}
+	.row.nomargin > .col-9 {padding: 0;}
 
 	.nomargin .col-8.container {
 		margin: 0 auto;
